# NetScout_OpenAPI

./: .env.example  README.md  pyproject.toml
src/: config.py  main.py
src/api/: __init__.py
src/api/middleware/: auth.py
src/api/routers/: connection_codes.py  devices.py  reports.py  users.py
src/database/: config.py
src/models/: __init__.py  api_key.py  base.py  connection_code.py  contact_message.py  device.py  report.py  user.py
src/repositories/: base.py  connection_code.py  device.py  report.py  user.py
src/schemas/: connection_code.py  device.py  report.py  user.py
static/: styles.css
static/images/favicon/: site.webmanifest
templates/: base.html
