[tool.poetry]
name = "netscout-api"
version = "0.1.0"
description = ""
authors = ["Michail Strukalin <saintklovus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
